<resources>
    <string name="app_name">BWAMOV</string>
    <string name="logo">LOGO</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="back">Back</string>
    <string name="photo">Photo</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="welcome">Selamat datang\nAngga Risky</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="home">Home</string>
    <string name="tiket">Tiket</string>
    <string name="profile">Profile</string>
    <string name="wallet_value">IDR 280.000</string>
    <string name="storyboard">Storyboard</string>
    <string name="storyboard_value">Iron Man, Thor, the Hulk and the rest of the Avengers unite to battle their most powerful enemy yet -- the evil Thanos. On a mission to collect all six Infinity Stones, Thanos plans to use the artifacts to inflict his twisted will on reality. The fate of the planet and existence itself has never been more uncertain as everything the Avengers have fought for has led up to this moment.</string>
    <string name="whos_played">Who\'s played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="bangku_a">A</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="empty">Empty</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="datetime"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="seat_no_c1">Seat No. C1</string>
    <string name="seat_no_c2">Seat No. C2</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="my_history">My History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>